tests/baselines/reference/propertyOrdering2.errors.txt
==== tests/cases/compiler/propertyOrdering2.ts (1 errors) ====
    class Foo {
        constructor(public x, y) { }
           foo() {
            var a = this.x;
            return this.y;
                        ~
!!! error TS2094: The property 'y' does not exist on value of type 'Foo'.
        }
    }
    